# issues2todo

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
issues2todo/: __init__.py  __main__.py  config.py
tests/: test_issues2todo.py
